--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -27,7 +27,8 @@ security:
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
-
+            login_throttling:
+                max_attempts: 3
             # https://symfony.com/doc/current/security/impersonating_user.html
             # switch_user: true
 
